containers/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epoch-server
  namespace: epoch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epoch-server
  template:
    metadata:
      labels:
        app: epoch-server
    spec:
      containers:
      - name: epoch-server
        image: ghcr.io/karlroigus/epoch-server:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: epoch-server
  namespace: epoch
spec:
  selector:
    app: epoch-server
  ports:
  - port: 80
    targetPort: 3000
