containers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epoch-ingress
  namespace: epoch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - epoch.enchantebeauty.com
    secretName: epoch-tls
  rules:
  - host: epoch.enchantebeauty.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: epoch-server
            port:
              number: 80
